<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"

        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:cardElevation="8dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/username_hint"
                    android:textSize="20sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:textSize="20sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="35dp"
                >

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_button"
                    android:textSize="20sp"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_marginEnd="20dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:textSize="20sp"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/white"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"

                    />


            </LinearLayout>



        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>